@@ -7,7 +7,9 @@ For a detailed view of what has changed, refer to the {url-repo}/commits/main[co
 
 == Unreleased
 
-_No changes since previous release._
+Bug Fixes::
+
+* fix crash if last fragment in TOC entry is not rendered (#2354)
 
 == 2.3.2 (2022-09-17) - @mojavelinux
 
